offcanvas-body spacing fixed

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -160,3 +160,6 @@ margin: 4px;
       width: 12% !important;
       }
 }
+.offcanvas-body{
+  padding: 0px !important;
+}
